<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.abdullahkabir.tatkashobji.MainActivity"
    android:orientation="vertical"
    android:background="@drawable/gradient1">

    <ImageView
        android:id="@+id/img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/fh" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/img"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <Button
            android:id="@+id/reg"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/round_mainbutton"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textSize="20sp" />


        <Button
            android:id="@+id/loginButton"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_mainbutton"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="20sp" />

        <Button
            android:id="@+id/visitstore"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_mainbutton"
            android:gravity="center"
            android:text="@string/visit_store"
            android:textSize="20sp" />
    </LinearLayout>


</LinearLayout>
